--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "mars",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^5.3.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "browserslist-to-esbuild": "^2.1.1",
+    "postcss-preset-env": "^9.3.0",
     "sass": "^1.70.0",
     "vite": "^5.0.8"
   },
